# adventofcode-solutions

./: README.md
2015/day03/cpp/: CMakeLists.txt
2015/day04/rust/: Cargo.toml
2015/day05/rust/: Cargo.toml
2015/day06/: README.txt
2015/day09/python/: paths.py
2015/day12/python/: solution.py
2015/day14/: README.txt
2015/day14/python/: olympics.py
2015/day17/: README.txt
2015/day18/python/: lights_life.py
2016/day02/: solution.py
2016/day03/: solution.py  solution.rs
2016/day04/: solution.py
2016/day06/: solution.py
2017/day02/: corruption_checksum.sc
2017/day03/: spiral_memory.sc
2017/day04/: high_entropy_passphrases.sc
advent-of-code/2022/: README.md
advent-of-code/2023/: .gitignore
day01/rust/: Cargo.toml
day02/rust/: Cargo.toml
day05/shell/: part2.sh
day07/cxx/: CMakeLists.txt
day07/cxx/src/: solver.cxx  task.h
day09/: README.txt
day11/python/: password.py
day13/: README.txt
day13/python/: table_seats.py
day15/: README.txt
day15/python/: recipe.py
day16/: README.txt
day17/: README.txt
day20/: README.txt
day21/python/: rpg_simulator.py
day3/rust/: Cargo.toml
day4/: README.txt
day5/: README.txt
day6/: README.txt
day7/: README.txt
day7/python/: part_one.py
day8/: esc.py
day9/python/: python_way_paths.py
hyperskill/numeric-matrix-processor/: README.md
hyperskill/simple-search-engine/: README.md
hyperskill/smart-calculator/: README.md
src/: Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day08.kt  Day13.kt  Utils.kt
src/calculator/: Main.kt
src/processor/: Main.kt
(+90 files in other folders)
